--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "Andy Ren",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/terraglacium/CafeKiwiV2/issues"
   },
