--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "CafeKiwiV2",
   "version": "1.0.0",
   "description": "CafeKiwi Discord bot",
-  "main": "main.js",
+  "main": "cafekiwi.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node cafekiwi.js"
   },
   "repository": {
     "type": "git",
