--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/terraglacium/CafeKiwiV2#readme",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "dotenv": "^6.2.0",
     "eslint": "^5.12.0"
   }
 }
